<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_background"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteX="5dp"
    tools:layout_editor_absoluteY="90dp">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="49dp"
            android:background="@drawable/text_bg"
            android:fontFamily="@font/autour_one"
            android:gravity="center"
            android:textColor="@color/black"
            android:paddingHorizontal="20dp"
            android:text="@string/top_text"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>


    <ImageView
        android:id="@+id/gradient"
        android:layout_width="500dp"
        android:layout_height="500dp"
        android:src="@drawable/gradient_for_bot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="800dp"
        android:layout_height="503dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/spiral"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="70dp"
        android:src="@drawable/bot_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="150dp"
        android:fontFamily="@font/autour_one"
        android:gravity="center"
        android:text="@string/splash_text"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.565"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/getStartedBtn"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/getstarted_bg"
        android:fontFamily="@font/autour_one"
        android:gravity="center"
        android:paddingHorizontal="80dp"
        android:text="@string/get_started"
        android:textSize="24sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>