<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_background"
    tools:context=".HomeActivity">

    <ImageView
        android:layout_width="300dp"
        android:layout_height="450dp"
        android:layout_marginTop="190dp"
        android:layout_marginEnd="210dp"
        android:src="@drawable/gradient_for_bot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="300dp"
        android:layout_height="450dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="190dp"
        android:src="@drawable/pink_gradient"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:layout_width="700dp"
        android:layout_height="500dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/spiral_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/navIcon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/nav_bar_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />

        <TextView
            android:id="@+id/greetingText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/autour_one"
            android:text="Hi, Michael 👋"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/profilePic"
            app:layout_constraintStart_toEndOf="@+id/navIcon"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />

        <ImageView
            android:id="@+id/profilePic"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/pfp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            android:fontFamily="@font/autour_one"
            android:gravity="center"
            android:text="@string/splash_text"
            android:textColor="@color/white"
            android:textSize="32sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.565"
            app:layout_constraintStart_toStartOf="parent" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:columnCount="2"
            android:elevation="12dp"
            android:layout_marginTop="30dp"
            android:paddingStart="15dp"
            android:rowCount="1">


            <androidx.cardview.widget.CardView
                android:id="@+id/chatCardview"
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:layout_margin="20dp"
                android:minHeight="150dp"
                app:cardBackgroundColor="@color/yellow"
                app:cardCornerRadius="20dp"
                app:cardElevation="12dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginStart="5dp"
                        android:src="@drawable/chat_with_bot" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:layout_marginHorizontal="10dp"
                        android:layout_marginTop="40dp"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:text="@string/chat_with_bot"
                        android:textSize="28sp"
                        android:textStyle="bold" />

                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/imageCardview"
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:layout_margin="20dp"
                android:minHeight="150dp"
                app:cardBackgroundColor="@color/pink"
                app:cardCornerRadius="20dp"
                app:cardElevation="12dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginStart="5dp"
                        android:src="@drawable/search_img" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:layout_marginHorizontal="10dp"
                        android:layout_marginTop="40dp"
                        android:gravity="center"
                        android:text="@string/search_image"
                        android:textColor="@color/black"
                        android:textSize="28sp"
                        android:textStyle="bold" />

                </LinearLayout>


            </androidx.cardview.widget.CardView>

        </GridLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>